# WebSocket-SH

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cpp-jwt-v1.1.1/include/jwt/: base64.hpp
json-xtypes/: CMakeLists.txt
json-xtypes/src/: conversion.cpp
src/: Client.cpp  Encoding.hpp  Endpoint.cpp  Endpoint.hpp  JwtValidator.hpp  Server.cpp  ServerConfig.hpp  ServiceProvider.cpp  json_encoding.cpp  websocket_types.hpp
test/: CMakeLists.txt
test/integration/: websocket__dispatch.cpp  websocket__roundtrip.cpp
test/unitary/: paths.cpp  paths.cpp.in  websocket__jwt.cpp
websocket/: CMakeLists.txt  README.md
websocket-test/: CMakeLists.txt
websocket-test/integration/: websocket__roundtrip.cpp  websocket__services.cpp
websocket/src/: Client.cpp  Encoding.hpp  Endpoint.cpp  Endpoint.hpp  Errors.hpp  JwtValidator.cpp  Server.cpp  ServerConfig.cpp  TopicPublisher.cpp  json_encoding.cpp
websocket/unit-test/: CMakeLists.txt  paths.hpp  websocket__jwt.cpp
